# specter_client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
scripts/: build.py  deploy.py  init.py  utils.py
specter/: CHANGELOG.md  README.md  pyproject.toml
specter/client/: client.py
specter/proto/: specter_pb2.py
specter/specter/: __init__.py
specter/specter/client/: __init__.py  attach.py  client.py  stream.py
specter/specter/proto/: specter_pb2.py  specter_pb2_grpc.py  utils.py
specter/specter/scripts/: __init__.py  generator.py  module.py  wrappers.py
specter/src/scripts/: module.py
specter_debugger/: README.md  pyproject.toml
specter_debugger/specter_debugger/: __init__.py  __main__.py  cli.py  client.py  constants.py  server.py
specter_debugger/specter_debugger/deployment/__main__.dist/: libexpat.so.1  libssl.so.3
specter_debugger/specter_debugger/proto/: specter.proto  specter_pb2.py  specter_pb2_grpc.py
specter_viewer/: README.md  __main__.py  attach_wizard.py  nuitka-crash-report.xml  pyproject.toml
specter_viewer/delegates/: methods.py
specter_viewer/models/: objects.py  properties.py  recorder.py
specter_viewer/specter_viewer/: __init__.py  __main__.py  constants.py
specter_viewer/specter_viewer/delegates/: __init__.py  methods.py  recorder.py
specter_viewer/specter_viewer/models/: __init__.py  methods.py  objects.py  properties.py  proxies.py  recorder.py
specter_viewer/specter_viewer/resources/: rcc.py  rcc.qrc
specter_viewer/specter_viewer/widgets/: __init__.py  editor.py  methods.py  objects.py  properties.py  recorder.py  toolbar.py  viewer.py
specter_viewer/src/: attach_wizard.py  constants.py  main_window.py
specter_viewer/src/delegates/: __init__.py
specter_viewer/src/models/: __init__.py  methods.py  objects.py  utils.py
specter_viewer/src/resources/: rcc.py  specterui.qrc
specter_viewer/src/widgets/: methods.py  objects.py  recorder.py
specter_viewer/widgets/: __init__.py  process_table.py  properties.py  viewer.py
specterui/: __init__.py  __main__.py  attach_wizard.py  constants.py  context.py  main_window.py
specterui/client/: __init__.py  attach.py  client.py  utils.py
specterui/delegates/: __init__.py  methods.py
specterui/models/: __init__.py  methods.py  objects.py  properties.py  recorder.py  utils.py
specterui/proto/: specter.proto  specter_pb2.py  specter_pb2_grpc.py
specterui/resources/: rcc.py  specterui.qrc
specterui/scripts/: __init__,py  module.py  wrappers.py
specterui/widgets/: __init__.py  editor.py  methods.py  objects.py  properties.py  recorder.py  terminal.py  toolbar.py  viewer.py
