[tool.poetry]
name = "specter"
version = "0.1.0"
description = ""
authors = ["Adam Minge <minge.adam@gmail.com>"]

[tool.poetry-monorepo.deps]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyinjector = "^1.3"
protobuf = "5.29.4"
grpcio = "1.71.0"
psutil = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"