[tool.poetry]
name = "specter_debugger"
version = "0.1.0"
description = "Debugger for specter"
authors = ["Adam Minge <minge.adam@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
tomlkit = "^0.5.4"
specter = { path = "../specter", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"