[tool.poetry]
name = "specter_viewer"
version = "0.1.0"
description = "Viewer for specter"
authors = ["Adam Minge <minge.adam@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.9"
psutil = "^7.0"
pyside6-utils = "^1.2.2"
tomlkit = "^0.5.4"
specter = { path = "../specter", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"