[tool.poetry]
name = "specter_viewer"
version = "0.1.0"
description = ""
authors = ["Adam Minge <minge.adam@gmail.com>"]

[tool.poetry-monorepo.deps]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.9"
pygments =  "^2.19"
specter = {path = "../specter", develop=true}
specter_debugger = {path = "../specter_debugger", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
